[package]
name = "hash-injector"
version = "0.1.0"
edition = "2024"

license = "BSD-2-Clause OR Apache-2.0 OR MIT"
rust-version = "1.85.0"

authors = ["Peter Lyons Kehl<peter.kehl@gmail.com>"]
description = "Hasher+BuildHasher to inject particular hash"

categories = ["algorithms", "caching", "data-structures"]

keywords = ["cache", "lru", "hashmap", "data-structures"]

[dependencies]

[features]
# Expensive
asserts = []

extra_flow = []

# Use to check that the Hasher is (or behaves like) SignalledInjectionHasher. Use only if the hashed
# types that inject hashes are never used with any incompatible Hasher.
#
# Expensive
injector_checks_finish = []

#default = ["asserts"]
#default = [           "extra_flow"]
#default = ["asserts", "extra_flow"]
#default = ["asserts",               "injector_checks_finish"]
#default = ["asserts", "extra_flow", "injector_checks_finish"]
